# e4dev-infrakt

./: .dockerignore  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: cd.yml  ci.yml
api/: auth.py  helpers.py  log_broadcaster.py  main.py  schemas.py
api/routes/: apps.py  dashboard.py  databases.py  deploy.py  env.py  github.py  github_webhook.py  keys.py  proxy.py  self_update.py  servers.py  settings.py  templates.py  webhooks.py
cli/: __init__.py  main.py
cli/commands/: app.py  ci.py  db.py  env.py  key.py  proxy.py  server.py  webhook.py
cli/core/: app_templates.py  auto_domain.py  backup.py  compose_renderer.py  config.py  console.py  crypto.py  database.py  db_stats.py  deploy_keys.py  deployer.py  exceptions.py  github.py  health.py  key_manager.py  provisioner.py  proxy_manager.py  ssh.py  webhook_sender.py
cli/models/: __init__.py  app.py  app_dependency.py  backup_policy.py  deployment.py  github_integration.py  platform_settings.py  s3_config.py  server.py  server_metric.py  server_tag.py  ssh_key.py  webhook.py
cli/templates/: app-compose.yml.j2  db-compose.yml.j2
docs/: API.md  ARCHITECTURE.md  COMMANDS.md
docs/plans/: 2026-02-26-deployment-perfection-design.md  2026-02-26-deployment-perfection.md  2026-02-27-app-detail-redesign-plan.md  2026-02-27-app-detail-redesign.md  (+12 more)
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json
scripts/: setup-vps.sh
tests/: conftest.py
(+93 files in other folders)
