[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infrakt"
version = "0.1.0"
description = "A self-hosted PaaS CLI for multi-server, multi-app deployments"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "paramiko>=3.4",
    "sqlalchemy>=2.0",
    "jinja2>=3.1",
    "cryptography>=42.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.27",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "httpx>=0.27",
    "mypy",
    "types-PyYAML",
    "ruff",
]

[project.scripts]
infrakt = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
